# CoreTermCLI

./: README.md  metadata.json
.github/workflows/: main.yml
app/src/cpp/: CMakeLists.txt  libterminal.c
app/src/main/java/com/coreterm/cli/ui/: TerminalView.kt
src/: App.tsx  index.css
